fix: improve spacing around project links

--- a/src/app/shared/project/project.component.scss
+++ b/src/app/shared/project/project.component.scss
@@ -42,6 +42,7 @@
         text-decoration: none;
         color: $secondary;
         transition: $transition-fast;
+        padding-right: 30px;
 
         &:hover {
           color: $accent;
